# T2T-Microstack

./: CMakeLists.txt  README.md  a.hpp
apps/: t2t_main.cpp
ci/: workflow.yaml
libitch/: itch.cpp  itch.h
liblob/: lob.cpp  lob.h
libring/: spsc_ring.hpp
librisk/: risk.h
libsig/: mm.h
libstoch/: avs.cpp  avs.h  ou.cpp  ou.h
libutil/: affinity.cpp  affinity.h  histo.cpp  histo.h  nomalloc.cpp  nomalloc.h  timing.cpp  timing.h
tests/: determinism_test.cpp  itch_test.cpp  lob_test.cpp  ring_test.cpp  sig_risk_test.cpp  stoch_test.cpp  test_main.cpp  test_util.h
tools/: diff_runs.py  gen_synth_feed.py  plot_latency.py
